force-app/main/default/objects/User/fields/Next_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_up__c</fullName>
    <label>Next Follow-up</label>
    <type>Date</type>
</CustomField>