force-app/main/default/objects/User/fields/Preferred_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact__c</fullName>
    <label>Preferred Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>💬 WhatsApp</fullName>
            </value>
            <value>
                <fullName>📸 Instagram</fullName>
            </value>
            <value>
                <fullName>📧 Email</fullName>
            </value>
            <value>
                <fullName>📱 SMS</fullName>
            </value>
            <value>
                <fullName>📞 Phone Call</fullName>
            </value>
            <value>
                <fullName>🌐 Website</fullName>
            </value>
            <value>
                <fullName>🔔 Push Notification</fullName>
            </value>
            <value>
                <fullName>💻 Web Chat</fullName>
            </value>
            <value>
                <fullName>📲 Mobile App</fullName>
            </value>
            <value>
                <fullName>🟦 Facebook</fullName>
            </value>
            <value>
                <fullName>𝕏 X</fullName>
            </value>
            <value>
                <fullName>▶️ YouTube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>